@@ -228,6 +228,7 @@ Specify the autofocus mode. Valid values are: AF.S, AF.C, AF.A\.
 \fB\-\-select_af_point\fR \fIAF_SELECT_MODE\fR
 .RS 4
 Specify the autofocus point selection mode. Valid values are: Auto-5, Auto-11, Select, Spot\.
+It is also possible to specify the raw numerical value\.
 .RE
 .PP
 \fB\-\-ae_metering\fR \fIAE_METERING\fR
